--- a/templates/art_engine_ui.html
+++ b/templates/art_engine_ui.html
@@ -285,6 +285,9 @@
                         <button onclick="openGifView('${timeline.id}')" class="text-gray-400 hover:text-white transition-colors" title="Open GIF View">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.538 1.118l-2.8-2.034a1 1 0 00-1.176 0l-2.8 2.034c-.783.57-1.838-.197-1.538-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.92 8.73c-.783-.57-.381-1.81.588-1.81h3.462a1 1 0 00.95-.69l1.07-3.292z" clip-rule="evenodd" /></svg>
                         </button>
+                        <button onclick="handleDeleteTimeline('${timeline.id}')" class="text-gray-400 hover:text-red-500 transition-colors" title="Delete Timeline">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 011-1h4a1 1 0 110 2H8a1 1 0 01-1-1zm-1 3a1 1 0 100 2h8a1 1 0 100-2H6z" clip-rule="evenodd" /></svg>
+                        </button>
                         <button class="text-gray-400 hover:text-white transition-colors timeline-toggle-btn" data-expanded="true" title="Toggle Timeline View">
                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transform" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                         </button>
@@ -476,6 +479,21 @@
                 await fetchAllData();
             } catch (error) {
                 console.error("Copy timeline error:", error);
+            }
+        }
+
+        window.handleDeleteTimeline = async function(timelineId) {
+            if (!confirm("Are you sure you want to delete this timeline? This action cannot be undone.")) {
+                return;
+            }
+            try {
+                const response = await fetch(`${API_URL}/v1/timelines/${timelineId}`, {
+                    method: 'DELETE',
+                });
+                if (!response.ok) throw new Error("Failed to delete timeline");
+                await fetchAllData();
+            } catch (error) {
+                console.error("Delete timeline error:", error);
             }
         }
 
